alignment issue resolved

--- a/assests/css/styles.scss
+++ b/assests/css/styles.scss
@@ -543,6 +543,7 @@
             display: grid;
             justify-items: center;
             gap: 25px;
+            transform: translate(2px, 0px);
         }
         &--title{
             font-family: var(--header-font);
@@ -688,6 +689,7 @@
         position: relative;
         text-align: center;
         background-color: #FFFDEB;
+        z-index: -2;
         &--image{
             top: -51px;
             right: -16px;
@@ -708,6 +710,16 @@
         &--button{
             padding-top: 32px;
         }
+        &--shape{
+            width: 0; 
+            height: 0; 
+            border-bottom: 375px solid rgba(255,223,0,0.1); 
+            border-left: 310px solid transparent; 
+            position: absolute;
+            right: 0;
+            bottom: 0;
+            z-index: -1;
+        }
     }
     @include media-sm{
         padding: 30px 0px;
@@ -723,8 +735,9 @@
         }
     }
     @include media-md{
-        &__details{
-            gap: 55px;
+        &__details{            
+            column-gap: 30px;
+            row-gap: 55px;
             grid-template-columns: repeat(1,1fr);
         }
         &__all-benifits{
